# WebRTCTransport

./: .gitignore  Cargo.toml  README.md  nginx.conf  nginx.list  setup-nginx.sh
.devcontainer/: devcontainer.json  setup.sh
client/: Cargo.toml  index.html  package-lock.json  package.json
client/src/: lib.rs  lib2.rs  main.ts  server.ts
client/www/: index.js  package.json  webpack.config.js
server/: Cargo.toml  Rocket.toml
server/src/: connection_manager.rs  main.rs  rocket.rs
server/src/connections/: connection.rs  manager.rs
www/: index.js  package-lock.json  package.json
