[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.35.1"
env_logger = "0.10.1"
webrtc = "0.9.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
rand = "0.8.5"
bytes = "1.5.0"
